# fujitsu-keyboard-mod

./: LICENSE  README.md  fujitsu-ps2.uf2
src/: readme.md
src/my-projects/: CMakeLists.txt
src/my-projects/fujitsu-ps2/: CMakeLists.txt  fujitsu-ps2.cpp  keyboard.cpp  keyboard.h  ps2dev.cpp  ps2dev.h
